crates/ars-components/src/overlay/snapshots/ars_components__overlay__dialog__tests__dialog_close_trigger_default_label.snap
---
source: crates/ars-components/src/overlay/dialog.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).close_trigger_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "close-trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "dialog",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Close dialog",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
