crates/ars-components/src/overlay/snapshots/ars_components__overlay__dialog__tests__dialog_content_open_alertdialog_with_title.snap
---
source: crates/ars-components/src/overlay/dialog.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).content_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "content",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "dialog",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "open",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "dialog-title",
            ),
        ),
        (
            Aria(
                Modal,
            ),
            String(
                "true",
            ),
        ),
        (
            Id,
            String(
                "dialog-content",
            ),
        ),
        (
            Role,
            String(
                "alertdialog",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
    ],
    styles: [],
}
